--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3template",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ape.swap/sdk": "^4.3.1",
+    "@ape.swap/sdk": "^4.3.3",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.1",
