--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-localstorage-simple": "^2.5.1",
+    "sharp": "^0.31.3",
     "theme-ui": "^0.15.3",
     "typescript": "4.8.4"
   }
