--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@web3-react/walletconnect": "^8.0.35-beta.0",
     "eslint-config-next": "^13.1.1",
     "ethers": "^5.7.2",
+    "framer-motion": "^8.1.9",
+    "lodash": "^4.17.21",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
