--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "next": "^13.1.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux-localstorage-simple": "^2.5.1",
