--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "@web3-react/types": "^8.0.20-beta.0",
     "@web3-react/url": "^8.0.25-beta.0",
     "@web3-react/walletconnect": "^8.0.35-beta.0",
+    "cids": "^1.1.9",
     "eslint-config-next": "^13.1.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.1.9",
     "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
+    "multicodec": "^3.2.1",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
