--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@types/lodash": "^4.14.191",
     "@types/react-window": "^1.8.5",
     "eslint": "8.31.0",
-    "typechain": "^8.1.1",
-    "yalc": "^1.0.0-pre.53",
+    "eslint-config-next": "^13.1.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "eslint-config-next": "^13.1.1"
+    "typechain": "^8.1.1",
+    "yalc": "^1.0.0-pre.53"
   },
   "dependencies": {
     "@ape.swap/sdk": "^4.3.3",
@@ -62,6 +62,7 @@
     "lodash": "^4.17.21",
     "multicodec": "^3.2.1",
     "next": "^13.1.1",
+    "numbro": "^2.3.6",
     "react": "^18.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
