--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
     "redux-localstorage-simple": "^2.5.1",
