--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/d3": "^7.4.0",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
+    "@types/qs": "^6.9.7",
     "@types/react-window": "^1.8.5",
     "eslint": "8.31.0",
     "eslint-config-next": "^13.1.6",
@@ -46,6 +47,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@uniswap/redux-multicall": "^1.1.8",
+    "@uniswap/smart-order-router": "^3.5.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@walletconnect/ethereum-provider": "1.7.1",
     "@web3-react/coinbase-wallet": "^8.0.34-beta.0",
@@ -64,6 +66,8 @@
     "ethers": "^5.7.2",
     "framer-motion": "^8.1.9",
     "graphql": "^16.6.0",
+    "jotai": "^2.0.0",
+    "jotai-immer": "^0.2.0",
     "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
     "multicodec": "^3.2.1",
