chore: Update packages and setup test

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "prod": "next build && next start",
     "lint": "next lint",
+    "test": "jest",
     "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "postinstall": "patch-package",
     "prepare": "yarn contracts:compile",
@@ -19,22 +20,26 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/d3": "^7.4.0",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
     "@types/react-window": "^1.8.5",
-    "eslint": "8.31.0",
+    "eslint": "8.33.0",
     "eslint-config-next": "^13.1.6",
+    "jest": "^29.4.1",
+    "jest-canvas-mock": "^2.3.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "ts-jest": "^29.0.5",
     "ts-transform-graphql-tag": "^0.2.1",
     "typechain": "^8.1.1",
-    "yalc": "^1.0.0-pre.53"
+    "yalc": "^1.0.0-pre.53",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@ape.swap/sdk": "^4.3.3",
     "@ape.swap/sdk-core": "^1.0.1",
     "@ape.swap/token-lists": "^1.0.0",
     "@ape.swap/v2-sdk": "^1.0.0",
@@ -43,28 +48,28 @@
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/node": "18.11.19",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "@uniswap/redux-multicall": "^1.1.8",
     "@uniswap/smart-order-router": "^3.5.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@walletconnect/ethereum-provider": "1.7.1",
-    "@web3-react/coinbase-wallet": "^8.0.34-beta.0",
+    "@web3-react/coinbase-wallet": "^8.0.35-beta.0",
     "@web3-react/core": "^8.0.35-beta.0",
-    "@web3-react/eip1193": "^8.0.26-beta.0",
+    "@web3-react/eip1193": "^8.0.27-beta.0",
     "@web3-react/empty": "^8.0.20-beta.0",
     "@web3-react/gnosis-safe": "^8.0.6-beta.0",
-    "@web3-react/metamask": "^8.0.28-beta.0",
+    "@web3-react/metamask": "^8.0.30-beta.0",
     "@web3-react/network": "^8.0.27-beta.0",
     "@web3-react/types": "^8.0.20-beta.0",
     "@web3-react/url": "^8.0.25-beta.0",
-    "@web3-react/walletconnect": "^8.0.35-beta.0",
+    "@web3-react/walletconnect": "^8.0.37-beta.0",
     "chart.js": "^4.2.0",
     "cids": "^1.1.9",
     "d3": "^7.8.2",
-    "ethers": "^5.7.2",
-    "framer-motion": "^8.1.9",
+    "ethers": "5.7.2",
+    "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
     "jotai": "^2.0.0",
     "jotai-immer": "^0.2.0",
@@ -83,7 +88,6 @@
     "react-window": "^1.8.8",
     "redux-localstorage-simple": "^2.5.1",
     "sharp": "^0.31.3",
-    "theme-ui": "^0.15.3",
-    "typescript": "4.8.4"
+    "theme-ui": "^0.15.3"
   }
 }
