feat: Client side routing fixed

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "yalc": "^1.0.0-pre.53"
   },
   "dependencies": {
-    "@ape.swap/router-sdk": "^1.0.1-alpha.0",
+    "@ape.swap/router-sdk": "^1.0.1-alpha.1",
     "@ape.swap/sdk-core": "^1.0.1",
+    "@ape.swap/smart-order-router": "^1.0.0-alpha.15",
     "@ape.swap/token-lists": "^1.0.0",
-    "@ape.swap/v2-sdk": "^1.0.1-alpha.0",
+    "@ape.swap/v2-sdk": "^1.0.1-alpha.1",
     "@ape.swap/v3-sdk": "^1.0.0",
-    "@ape.swap/smart-order-router": "^1.0.0-alpha.1",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
@@ -72,7 +72,8 @@
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
-    "jotai": "^2.0.0",
+    "immer": "^9.0.19",
+    "jotai": "^2.0.1",
     "jotai-immer": "^0.2.0",
     "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
