--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test": "jest",
     "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "postinstall": "patch-package",
-    "prepare": "yarn contracts:compile",
     "contracts:compile": "yarn contracts:compile:abi && yarn contracts:compile:v3",
     "contracts:compile:abi": "typechain --out-dir src/config/abi/types --target=ethers-v5 \"src/config/abi/*.json\"",
-    "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/config/abi/types/v3 \"./node_modules/@uniswap/**/artifacts/contracts/**/*[!dbg].json\""
+    "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/config/abi/types/v3 \"./node_modules/@uniswap/**/artifacts/contracts/**/*[!dbg].json\"",
+    "graphql:fetch": "node fetch-schema.js",
+    "graphql:generate:thegraph": "graphql-codegen --config apollo-codegen_thegraph.ts",
+    "graphql:generate": "yarn graphql:generate:thegraph",
+    "prepare": "yarn contracts:compile && yarn graphql:fetch && yarn graphql:generate"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -55,6 +58,7 @@
     "@types/react-dom": "18.0.10",
     "@uniswap/redux-multicall": "^1.1.8",
     "@uniswap/token-lists": "^1.0.0-beta.31",
+    "@uniswap/v3-sdk": "^3.9.0",
     "@walletconnect/ethereum-provider": "1.7.1",
     "@web3-react/coinbase-wallet": "^8.0.35-beta.0",
     "@web3-react/core": "^8.0.35-beta.0",
@@ -72,6 +76,12 @@
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
+    "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/client-preset": "^1.2.1",
+    "@graphql-codegen/typescript": "^2.8.3",
+    "@graphql-codegen/typescript-operations": "^2.5.8",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^2.7.8",
     "immer": "^9.0.19",
     "jotai": "^2.0.1",
     "jotai-immer": "^0.2.0",
