--- a/package.json
+++ b/package.json
@@ -52,12 +52,19 @@
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
+    "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/client-preset": "^1.2.1",
+    "@graphql-codegen/typescript": "^2.8.3",
+    "@graphql-codegen/typescript-operations": "^2.5.8",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^2.7.8",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@uniswap/redux-multicall": "^1.1.8",
     "@uniswap/token-lists": "^1.0.0-beta.31",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-sdk": "^3.9.0",
     "@walletconnect/ethereum-provider": "1.7.1",
     "@web3-react/coinbase-wallet": "^8.0.35-beta.0",
@@ -76,12 +83,6 @@
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
-    "@graphql-codegen/cli": "^2.15.0",
-    "@graphql-codegen/client-preset": "^1.2.1",
-    "@graphql-codegen/typescript": "^2.8.3",
-    "@graphql-codegen/typescript-operations": "^2.5.8",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "@graphql-codegen/typescript-resolvers": "^2.7.8",
     "immer": "^9.0.19",
     "jotai": "^2.0.1",
     "jotai-immer": "^0.2.0",
