--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@ape.swap/smart-order-router": "^1.0.0-alpha.29",
     "@ape.swap/token-lists": "^1.0.0",
     "@ape.swap/v2-sdk": "^1.0.1-alpha.1",
-    "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.7",
+    "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.11",
     "@ape.swap/v3-sdk": "^1.0.0",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
@@ -61,7 +61,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.8",
     "@reduxjs/toolkit": "^1.9.1",
-    "@types/node": "18.11.19",
+    "@types/node": "^18.14.6",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@uniswap/redux-multicall": "^1.1.8",
