--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jotai-immer": "^0.2.0",
     "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "multicodec": "^3.2.1",
     "next": "^13.1.6",
     "numbro": "^2.3.6",
