--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
+    "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/react-window": "^1.8.5",
     "eslint": "8.33.0",
     "eslint-config-next": "^13.1.6",
@@ -98,6 +99,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
     "redux-localstorage-simple": "^2.5.1",
