--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@typechain/ethers-v5": "^10.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/d3": "^7.4.0",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/react-window": "^1.8.5",
+    "@types/uuid": "^9.0.1",
     "eslint": "8.33.0",
     "eslint-config-next": "^13.1.6",
     "jest": "^29.4.1",
@@ -80,6 +82,7 @@
     "@web3-react/walletconnect": "^8.0.37-beta.0",
     "chart.js": "^4.2.0",
     "cids": "^1.1.9",
+    "crypto-js": "^4.1.1",
     "d3": "^7.8.2",
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
@@ -103,6 +106,7 @@
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
     "redux-localstorage-simple": "^2.5.1",
-    "theme-ui": "^0.15.3"
+    "theme-ui": "^0.15.3",
+    "uuid": "^9.0.0"
   }
 }
