--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-sdk": "^3.9.0",
+    "@vercel/analytics": "^0.1.11",
     "@walletconnect/ethereum-provider": "1.7.1",
     "@web3-react/coinbase-wallet": "^8.0.35-beta.0",
     "@web3-react/core": "^8.0.35-beta.0",
