--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "yalc": "^1.0.0-pre.53"
   },
   "dependencies": {
-    "@ape.swap/router-sdk": "^1.0.1-alpha.14",
+    "@ape.swap/router-sdk": "^1.1.0",
     "@ape.swap/sdk-core": "^1.0.2",
-    "@ape.swap/smart-order-router": "^1.0.0-alpha.69",
+    "@ape.swap/smart-order-router": "^1.1.0",
     "@ape.swap/token-lists": "^1.0.0",
-    "@ape.swap/v2-sdk": "^1.0.1-alpha.5",
-    "@ape.swap/v3-sdk": "^1.0.1-alpha.9",
+    "@ape.swap/v2-sdk": "^1.1.0",
+    "@ape.swap/v3-sdk": "^1.1.0",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
