--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@web3-react/types": "^8.0.20-beta.0",
     "@web3-react/url": "^8.0.25-beta.0",
     "@web3-react/walletconnect": "^8.0.37-beta.0",
+    "axios-retry": "^3.4.0",
     "chart.js": "^4.2.0",
     "cids": "^1.1.9",
     "crypto-js": "^4.1.1",
