--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "@ape.swap/v2-sdk": "^1.1.0",
     "@ape.swap/v3-sdk": "^1.1.0",
     "@apollo/client": "^3.7.6",
-    "bignumber.js": "^9.0.0",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.6",
@@ -85,7 +84,9 @@
     "@web3-react/url": "^8.0.25-beta.0",
     "@web3-react/walletconnect": "^8.0.37-beta.0",
     "axios-retry": "^3.4.0",
+    "bignumber.js": "^9.0.0",
     "chart.js": "^4.2.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "cids": "^1.1.9",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.2",
