--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "bignumber.js": "^9.0.0",
     "chart.js": "^4.2.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-plugin-zoom": "^2.0.1",
     "cids": "^1.1.9",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.2",
