--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/d3": "^7.4.0",
+    "@types/dom-to-image": "^2.6.4",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
@@ -85,14 +86,17 @@
     "@web3-react/walletconnect": "^8.0.37-beta.0",
     "axios-retry": "^3.4.0",
     "bignumber.js": "^9.0.0",
+    "canvg": "^4.0.1",
     "chart.js": "^4.2.0",
     "chartjs-adapter-moment": "^1.0.1",
     "cids": "^1.1.9",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.2",
+    "dom-to-image": "^2.6.0",
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
+    "html2canvas": "1.4.1",
     "immer": "^9.0.19",
     "jotai": "^2.0.1",
     "jotai-immer": "^0.2.0",
@@ -103,6 +107,7 @@
     "next": "^13.2.4",
     "numbro": "^2.3.6",
     "polished": "^4.2.2",
+    "rasterizehtml": "^1.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.0",
@@ -110,6 +115,7 @@
     "react-feather": "^2.0.10",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.5",
+    "react-svg": "^16.1.10",
     "react-window": "^1.8.8",
     "redux-localstorage-simple": "^2.5.1",
     "swiper": "^9.2.0",
