--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/react-window": "^1.8.5",
     "@types/uuid": "^9.0.1",
@@ -114,6 +115,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-helmet": "^6.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.5",
     "react-svg": "^16.1.10",
