--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
+    "html-to-image": "^1.11.11",
     "html2canvas": "1.4.1",
     "immer": "^9.0.19",
     "jotai": "^2.0.1",
