--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@ape.swap/smart-order-router": "^1.2.1-alpha.2",
     "@ape.swap/token-lists": "^1.0.0",
     "@ape.swap/v2-sdk": "^1.1.0",
-    "@ape.swap/v3-sdk": "^1.2.0",
     "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.12",
+    "@ape.swap/v3-sdk": "^1.2.0",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
@@ -110,6 +110,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-input-range": "^1.3.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8",
