--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/d3": "^7.4.0",
-    "@types/dom-to-image": "^2.6.4",
+    "@types/dom-to-image": "2.6.4",
     "@types/jest": "^29.2.5",
     "@types/lodash": "^4.14.191",
     "@types/qs": "^6.9.7",
@@ -94,12 +94,10 @@
     "cids": "^1.1.9",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.2",
-    "dom-to-image": "^2.6.0",
+    "dom-to-image": "2.6.0",
     "ethers": "5.7.2",
     "framer-motion": "^9.0.1",
     "graphql": "^16.6.0",
-    "html-to-image": "^1.11.11",
-    "html2canvas": "1.4.1",
     "immer": "^9.0.19",
     "jotai": "^2.0.1",
     "jotai-immer": "^0.2.0",
@@ -110,7 +108,6 @@
     "next": "^13.2.4",
     "numbro": "^2.3.6",
     "polished": "^4.2.2",
-    "rasterizehtml": "^1.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.0",
