--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@ape.swap/smart-order-router": "1.2.3-alpha.3",
     "@ape.swap/token-lists": "^1.0.0",
     "@ape.swap/v2-sdk": "^1.1.0",
-    "@ape.swap/v3-sdk": "^1.2.0",
     "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.12",
+    "@ape.swap/v3-sdk": "^1.2.0",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
@@ -74,16 +74,16 @@
     "@uniswap/v3-sdk": "^3.9.0",
     "@vercel/analytics": "^0.1.11",
     "@walletconnect/ethereum-provider": "1.7.1",
-    "@web3-react/coinbase-wallet": "^8.0.35-beta.0",
-    "@web3-react/core": "^8.0.35-beta.0",
-    "@web3-react/eip1193": "^8.0.27-beta.0",
-    "@web3-react/empty": "^8.0.20-beta.0",
-    "@web3-react/gnosis-safe": "^8.0.6-beta.0",
-    "@web3-react/metamask": "^8.0.30-beta.0",
-    "@web3-react/network": "^8.0.27-beta.0",
-    "@web3-react/types": "^8.0.20-beta.0",
-    "@web3-react/url": "^8.0.25-beta.0",
-    "@web3-react/walletconnect": "^8.0.37-beta.0",
+    "@web3-react/coinbase-wallet": "^8.2.0",
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/eip1193": "^8.2.0",
+    "@web3-react/empty": "^8.2.0",
+    "@web3-react/gnosis-safe": "^8.2.0",
+    "@web3-react/metamask": "^8.2.1",
+    "@web3-react/network": "^8.2.0",
+    "@web3-react/types": "^8.2.0",
+    "@web3-react/url": "^8.2.0",
+    "@web3-react/walletconnect-v2": "^8.3.3",
     "axios-retry": "^3.4.0",
     "bignumber.js": "^9.0.0",
     "chart.js": "^4.2.0",
