--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "yalc": "^1.0.0-pre.53"
   },
   "dependencies": {
-    "@ape.swap/apeswap-lists": "1.1.67",
+    "@ape.swap/apeswap-lists": "^1.2.5-alpha.0",
     "@ape.swap/router-sdk": "^1.2.0",
     "@ape.swap/sdk-core": "^1.0.2",
-    "@ape.swap/smart-order-router": "1.2.3-alpha.3",
+    "@ape.swap/smart-order-router": "^1.2.4-alpha.0",
     "@ape.swap/token-lists": "^1.0.0",
     "@ape.swap/v2-sdk": "^1.1.0",
-    "@ape.swap/v3-sdk": "^1.2.0",
     "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.12",
+    "@ape.swap/v3-sdk": "^1.2.0",
+    "@ape.swap/zap-tx-builder": "^0.0.2",
     "@apollo/client": "^3.7.6",
     "@coinbase/wallet-sdk": "^3.3.0",
     "@emotion/react": "^11.10.5",
