--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@testing-library/react": "^13.4.0",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/crypto-js": "^4.1.1",
@@ -67,6 +68,8 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.8",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -114,8 +117,8 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-input-range": "^1.3.0",
     "react-helmet": "^6.1.0",
+    "react-input-range": "^1.3.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-redux": "^8.0.5",
     "react-svg": "^16.1.10",
