feat|wip: Integrate Wido zap protocol into Zap reducers - Setup structure for Redux thunks for Zap API calls - Provide a location and pattern to drop in future zap protocols

--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "redux-localstorage-simple": "^2.5.1",
     "swiper": "8.4.7",
     "theme-ui": "^0.15.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wido": "^0.3.3"
   }
 }
