chore: set node version to 18

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepare": "yarn contracts:compile && yarn graphql:fetch && yarn graphql:generate"
   },
   "engines": {
-    "node": "18.17.0"
+    "node": "18.x"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
