--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@ape.swap/router-sdk": "^1.2.0",
     "@ape.swap/sdk-core": "^1.0.2",
     "@ape.swap/smart-order-router": "1.2.3-alpha.3",
-    "@ape.swap/token-lists": "1.0.59",
+    "@ape.swap/token-lists": "1.0.56",
     "@ape.swap/v2-sdk": "^1.1.0",
     "@ape.swap/v2-zap-sdk": "^1.0.0-alpha.12",
     "@ape.swap/v3-sdk": "^1.2.0",
@@ -127,6 +127,7 @@
     "redux-localstorage-simple": "^2.5.1",
     "swiper": "8.4.7",
     "theme-ui": "^0.15.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wido": "^0.3.6"
   }
 }
