feat: integrate wallchain

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-sdk": "^3.9.0",
     "@vercel/analytics": "^0.1.11",
+    "@wallchain/sdk": "^0.6.4",
     "@walletconnect/ethereum-provider": "1.7.1",
     "@web3-react/coinbase-wallet": "^8.2.0",
     "@web3-react/core": "^8.2.0",
@@ -92,6 +93,7 @@
     "@web3-react/walletconnect-v2": "^8.3.3",
     "axios-retry": "^3.4.0",
     "bignumber.js": "^9.0.0",
+    "bottleneck": "^2.19.5",
     "canvg": "^4.0.1",
     "chart.js": "^4.2.0",
     "chartjs-adapter-moment": "^1.0.1",
